# lab08

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker.yml
demo/: hello_world.cpp
source/: CMakeLists.txt
